		- allowed DS_STRING for conditions in ApplElemAccessImpl.getInstancesExt()
		- improved error message at existence check of select attributes of query in ApplElemAccessImpl.getInstancesExt()
		- skipped values attribute of AoLocalColumns to be returned on ApplElemAccessImpl.getInstances() calls with attribute wildcard

	0.7.2 (Christian Rechner)
		- skip parse errors in documentation section to be able to read files having invalid
		  documentation section

	0.7.1 (Elektronische Fahrwerksysteme GmbH)
		- changed type of AoExternalComponent.inioffset to DT_LONGLONG

	0.7.0 (Markus Renner)

		- implemented method ApplElemAccessImpl.updateInstances()
		- added support for * wildcard at method ApplElemAccessImpl.getInstances()
		- small addition to an error message for easier error tracking
		- added tolerance of DataType DT_LONG for the AoLocalColumn.sequence_representation
		  attribute at method AtfxCache.setInstanceValue() which was preventing atfx
		  generation for given data coming directly from a Horiba Stars system.
		- Fixed bug in base model 'asam32' when AoExternalComponent is missing


	0.6.9 (Markus Renner)

		- prevented Nullpointer Exceptions when a insertInstances() was called
		  with relation attributes, where a Flag was null and the IID was a LongLong 0

	0.6.8 (Christian Rechner)
	
		- Fixed bug in method 'ApplElemAccess->setRelInst' with mode 'SetType.REMOVE'

	0.6.7 (Christian Rechner)
	
		- Added test cases for reading official ASAM 6.0 example files
		- Fixed adjust datatype in case for inline XML values and raw datatype
		  differs from measurement quantity datatype (to make ASAM example working)

	0.6.6 (Masayoshi Kuroda)
	
		- Added support for new ASAM ODS 6.0 'DT_BYTESTR'

	0.6.5 (Gigatronik Ingolstadt GmbH)
	
		- Escape '+' in patterns
		- Change messages in bin-file-related errors
		- Support LocalColumn-inline-flags

	0.6.4 (Christian Rechner)
	
		- Added implicit creation of 'AoExternalComponent->ordinal_number' if not existing in